app/src/styles.sass
@use 'sass:color'
@import 'colors'
@import 'typo'
@import 'sizes'
@import 'mixins'
@import 'responsive'

html, body
  max-width: 100%
  overflow-x: hidden
  position: relative

body
  font-family: "Asap", sans-serif
  font-size: $fontsize
  margin: $medium-space $medium-space
  color: color.adjust($maincolor, $lightness: -25%)

.main-container
  max-width: $contmaxwidth
  margin: 6em auto 0
  padding: 0 $medium-space

h3:first-child
  margin-top: 0

input
  font-size: inherit
  font-family: inherit


@function tame($color)
  @return color.adjust($color, $saturation: -20%, $lightness: +10%)

.formactions
  padding: $small-space 0
  display: flex
  justify-content: flex-end
  button
    @include userbox
    background-color: $userbuttonbgcolor
    font-size: $fontsize
    padding: 0.4em 1em
    margin-left: $medium-space
    &:hover
      background-color: color.adjust($maincolor, $lightness: 20%)
      color: $fgOnMaincolor
    &[disabled], &[disabled]:hover
      border-color: tame($maincolor)
      background-color: tame($userbuttonbgcolor)
      color: tame($useboxfgcolor)

@media screen and (max-width: $breakpoint-tablet)
  .dialog-box .formactions
    padding: 0
    flex-direction: column
    align-items: stretch
    button
      margin-left: 0
      margin-bottom: $medium-space

.formactions.login-action
  justify-content: center
  margin-top: 1em
  margin-bottom: 1em
  button
    margin-left: 0
    min-width: 55%
    max-width: 100%

.merged-userbox-grow
  @include userbox
  display: flex
  padding: 0
  & > *
    border: none
  & > input
    margin: $small-space 0
    background-color: transparent
    flex-grow: 1
    outline: none
    padding: 0.6em
  & > input:first-child
    margin-left: $small-space
  & > input:last-child
    margin-right: $small-space
  & > button:last-child
    background-color: inherit
  & > button:last-child:hover
    color: $maincolor
    background-color: $softbgcolor
  & > button[disabled]:last-child, & > [disabled]:last-child:hover
    background-color: tame($userbuttonbgcolor)
    color: tame($useboxfgcolor)

.merged-input[role="group"]
  display: flex
  justify-content: left
  input
    border: none
    outline: none
    margin: 0
    padding: 0
    background: transparent
    color: currentColor
  input[type="number"]
    text-align: center

.formerrors
  color: $errorcolor
  font-size: 10pt
  p
    margin: 0

.form-alone
  width: 260px
  margin: 0 auto
  padding: 1em
  border: solid 2px $maincolor
  border-radius: 8px
  .mat-form-field-appearance-standard .mat-form-field-flex
    padding-top: 0

.http-error
  font-family: monospace

.error-msg
  border-left: solid 3px $errorcolor
  border-right: solid 3px $errorcolor
  padding: 0 1em
  color: $errorcolor

.dialog-message
  margin-bottom: 4ex

.information-container
  display: grid
  grid-template-columns: 1fr minmax(min-content, 31%)
  @media screen and (max-width: $breakpoint-laptop)
    grid-template-columns: 1fr minmax(min-content, 5%)

.information
  margin-left: $medium-space
  border-left: solid 1px $maincolor
  padding-left: $medium-space
  p
    font: $infofont
    margin-top: 0

th
  font-weight: 600

@include mat-core()
$itero-mat-primary: mat-palette($itero-mat-maincolor, 900, A100, 900)
$itero-mat-accent: mat-palette($itero-mat-maincolor, A400, A200, A700)
$itero-mat-theme: mat-light-theme(( color: ( primary: $itero-mat-primary, accent: $itero-mat-accent )))
@include angular-material-theme($itero-mat-theme)
@include angular-material-typography($itero-mat-typography)



.info-panel
  border: 1px solid #704f6a
  border-right: none
  background-color: #d5b6d0
  box-shadow: -5px 0px 5px 0 rgba(255, 204, 244, 0.7)
  position: absolute
  z-index: 1
  right: 0
  display: flex
  flex-flow: row nowrap
  transform: translate(85%,0)
  transition: 1s
  width: 80%
  @media screen and (min-width: $breakpoint-tablet) and (max-width: $breakpoint-laptop)
    width: 50%
  @media screen and (min-width: $breakpoint-laptop)
    display: none
  .info-panel-icon-open #help-button, .info-panel-icon-close #close-button
    margin: 0.7em $small-space
  .info-panel-icon-close #close-button
    display: none
  .info-panel-content .information
    display: none
    overflow: hidden
    p
      margin-top: 1em

.basicform mat-select
  @include userinput
  width: auto

//.mat-select-panel.base-colors mat-option.mat-selected:not(.mat-option-multiple)
  background-color: $userbuttonbgcolor

//.mat-select-panel.base-colors mat-option:hover:not(.mat-option-disabled):not(.mat-selected)
  background-color: $softbgcolor

//.mat-form-field-wrapper
  padding: 0
  .mat-form-field-infix
    padding: 4px 0
    border-top: 0.3em solid transparent
    .mat-select-arrow-wrapper
      transform: none
  .mat-form-field-outline > div
    background-color: $softbgcolor

mat-form-field.lone-field
  display: block
  .mat-from-field-wrapper
    padding-bottom: 0

/* Added for SimpleAlternativeComponent, to align the icon correctly on Firefox 83.0. */
.mat-form-field-suffix
  align-self: flex-end

mat-radio-group .radio-hint
  font-size: 75%
  color: rgba(0,0,0,0.6)

div.mat-menu-panel.nav-menu
  background-color: $userbuttonbgcolor
  border-top-left-radius: 0
  border-top-right-radius: 0
  button.mat-menu-item
    font-size: smaller
    line-height: 36px
    height: 36px
    .mat-icon
      margin-right: 10px
  button.mat-menu-item:hover
    background-color: $nav-hover-bg
    color: white

.mat-menu-content hr
  background-color: $maincolor
  border: none
  height: 1px
  width: 78%
  

